アカウント、グループ

--- a/appproject/accounts/templates/group/create_group.html
+++ b/appproject/accounts/templates/group/create_group.html
@@ -8,7 +8,7 @@
     <!-- ...existing code... -->
 
       <div class="form-row" style="align-items:flex-start">
-        <div class="label">メンバー</div>
+        <div class="label">グループ作成</div>
           <form method="post" action="{% url 'accounts:group_create' %}">
             {% csrf_token %}
             <div class="form-row" style="align-items:flex-start">
